--- a/app/src/main/res/layout/action_bar_search.xml
+++ b/app/src/main/res/layout/action_bar_search.xml
@@ -25,7 +25,7 @@
 
     <ImageView
         android:id="@+id/iv_search"
-        style="@style/ItemBackaground"
+        style="@style/ItemBackagroundBorderless"
         android:layout_width="56dp"
         android:layout_height="48dp"
         android:layout_marginLeft="10dp"
