--- a/app/src/main/res/layout/item_book_shelf.xml
+++ b/app/src/main/res/layout/item_book_shelf.xml
@@ -19,7 +19,8 @@
             android:background="@drawable/cover_border"
             android:contentDescription="@string/str_empty"
             android:padding="1px"
-            android:scaleType="fitXY" />
+            android:scaleType="fitXY"
+            android:src="@drawable/icon_place_holder" />
 
         <ImageView
             android:id="@+id/item_iv_select"
@@ -74,9 +75,9 @@
         <TextView
             android:id="@+id/item_tv_author"
             style="@style/ItemSummary"
-            android:layout_marginTop="@dimen/item_text_margin"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/item_text_margin"
             android:text="@string/app_name"
             android:textColor="@color/tv_desc_color"
             android:textSize="@dimen/font_size_small" />
@@ -86,8 +87,8 @@
             style="@style/ItemSummary"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:maxLines="2"
             android:layout_marginTop="@dimen/item_text_margin"
+            android:maxLines="2"
             android:text="@string/app_name"
             android:textColor="@color/tv_desc_color"
             android:textSize="@dimen/font_size_12" />
