--- a/app/src/main/res/layout/item_recommend.xml
+++ b/app/src/main/res/layout/item_recommend.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_vertical"
-    android:orientation="horizontal" >
+    android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/item_iv_cover"
@@ -13,36 +13,34 @@
         android:background="@drawable/cover_border"
         android:contentDescription="@string/str_empty"
         android:padding="1px"
-        android:scaleType="fitXY" />
+        android:scaleType="fitXY"
+        android:src="@drawable/icon_place_holder" />
 
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:orientation="vertical"
-        android:padding="@dimen/default_item_padding_small" >
+        android:padding="@dimen/default_item_padding_small">
 
         <TextView
             android:id="@+id/item_tv_title"
             style="@style/ItemTitle"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="最强弃少" />
+            android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/item_tv_author"
             style="@style/ItemSummary"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="城东" />
+            android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/item_tv_summary"
             style="@style/ItemSummary"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:text="三小时前更新：第一千八百章" />
+            android:layout_marginTop="5dp" />
     </LinearLayout>
 
 </LinearLayout>
