--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -50,4 +50,10 @@
         <item>4</item>
     </integer-array>
 
+    <string-array name="login_types">
+        <item>新浪微博登陆</item>
+        <item>QQ登陆</item>
+    </string-array>
+
+
 </resources>
