--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,6 +21,8 @@
     <color name="main_night_shadow_color">#303030</color>
     <color name="blue_n">#2ddca3</color>
     <color name="blue_s">#2ddca3</color>
+    <color name="green">#00855e</color>
+
 
     <!-- Common -->
     <color name="item_selected_bg_color">#20000000</color>
