--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -96,7 +96,7 @@
 
     <style name="SetItemHeader">
         <item name="android:textSize">@dimen/font_size_small</item>
-        <item name="android:textColor">@color/tv_title_color</item>
+        <item name="android:textColor">@color/green</item>
         <item name="android:layout_width">fill_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:singleLine">true</item>
@@ -108,7 +108,7 @@
     </style>
 
     <style name="SetItemTextView" parent="ItemBackaground">
-        <item name="android:textSize">@dimen/font_size_big</item>
+        <item name="android:textSize">@dimen/font_size_middle</item>
         <item name="android:textColor">@color/tv_title_color</item>
         <item name="android:layout_width">fill_parent</item>
         <item name="android:layout_height">@dimen/set_item_height</item>
@@ -129,7 +129,7 @@
     </style>
 
     <style name="SetItem_Title">
-        <item name="android:textSize">@dimen/font_size_big</item>
+        <item name="android:textSize">@dimen/font_size_middle</item>
         <item name="android:textColor">@color/tv_title_color</item>
         <item name="android:layout_width">fill_parent</item>
         <item name="android:layout_height">wrap_content</item>
@@ -138,7 +138,7 @@
 
     <style name="SetItem_Summary">
         <item name="android:textSize">@dimen/font_size_small</item>
-        <item name="android:textColor">@color/tv_title_color</item>
+        <item name="android:textColor">@color/tv_desc_color</item>
         <item name="android:layout_width">fill_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:singleLine">true</item>
