--- a/app/src/main/res/layout/activity_feedback.xml
+++ b/app/src/main/res/layout/activity_feedback.xml
@@ -1,16 +1,24 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="16dp">
+    android:layout_height="match_parent">
 
-
-    <EditText
-        android:layout_width="fill_parent"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/search_view_bg"
-        android:padding="10dp"
-        android:hint="@string/feedback_hint"
-        android:id="@+id/et_content" />
+        android:orientation="vertical"
+        android:padding="16dp">
 
-</LinearLayout>
+        <EditText
+            android:id="@+id/et_content"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/search_view_bg"
+            android:hint="@string/feedback_hint"
+            android:paddingBottom="10dp"
+            android:paddingTop="10dp"
+            android:textColor="@color/tv_title_color"
+            android:textSize="@dimen/font_size_middle" />
+
+    </LinearLayout>
+
+</ScrollView>
