--- a/app/src/main/res/layout/dialog_l_simple.xml
+++ b/app/src/main/res/layout/dialog_l_simple.xml
@@ -1,26 +1,26 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
     android:gravity="right"
+    android:orientation="horizontal"
     android:paddingRight="20dp">
 
     <TextView
         android:id="@+id/tv_btn_cancel"
+        style="@style/ItemBackaground"
         android:layout_width="80dp"
         android:layout_height="38dp"
-        android:background="@drawable/item_common_bg"
+        android:layout_marginRight="10dp"
         android:gravity="center"
         android:text="@string/str_cancel"
-        android:layout_marginRight="10dp"
         android:textColor="@color/tv_desc_color"
         android:textSize="@dimen/font_size_middle" />
 
     <TextView
         android:id="@+id/tv_btn_sure"
+        style="@style/ItemBackaground"
         android:layout_width="80dp"
         android:layout_height="38dp"
-        android:background="@drawable/item_common_bg"
         android:gravity="center"
         android:text="@string/str_sure"
         android:textColor="@color/main_dress_color"
