--- a/app/src/main/res/layout/layout_read_bottom.xml
+++ b/app/src/main/res/layout/layout_read_bottom.xml
@@ -37,6 +37,7 @@
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
                 android:layout_weight="1"
+                android:max="150"
                 android:maxHeight="2dp"
                 android:minHeight="2dp"
                 android:progressDrawable="@drawable/seekbar_bg"
