--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -18,11 +18,11 @@
         <item name="android:actionMenuTextAppearance">@style/MyActionBar.MenuItem</item>
         <item name="android:actionModeCloseButtonStyle">@style/MyActionModeCloseButton</item>
 
-        <!-- 启用窗口的内容转换-->
-        <item name="android:windowContentTransitions">true</item>
-        <!-- 进入、退出的转换(效果) -->
-        <item name="android:windowEnterTransition">@android:transition/explode</item>
-        <item name="android:windowExitTransition">@android:transition/explode</item>
+        <!--&lt;!&ndash; 启用窗口的内容转换&ndash;&gt;-->
+        <!--<item name="android:windowContentTransitions">true</item>-->
+        <!--&lt;!&ndash; 进入、退出的转换(效果) &ndash;&gt;-->
+        <!--<item name="android:windowEnterTransition">@android:transition/explode</item>-->
+        <!--<item name="android:windowExitTransition">@android:transition/explode</item>-->
 
     </style>
 
