Updated res files.

--- a/app/src/main/res/layout/activity_book.xml
+++ b/app/src/main/res/layout/activity_book.xml
@@ -2,6 +2,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.qiwenge.android.act.BookActivity"
-    tools:ignore="MergeRootFrame" />
+    android:layout_height="match_parent">
+
+    <fragment
+        android:id="@+id/bookFragment"
+        android:name="com.qiwenge.android.fragments.BookFragment"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent" />
+
+
+</FrameLayout>
