--- a/app/src/main/res/layout/layout_loading.xml
+++ b/app/src/main/res/layout/layout_loading.xml
@@ -3,6 +3,6 @@
     android:id="@+id/pb_loading"
     android:layout_width="45dp"
     android:layout_height="45dp"
-    android:visibility="gone"
-    android:layout_centerInParent="true" />
+    android:layout_centerInParent="true"
+    android:visibility="gone" />
 
