--- a/app/src/main/res/layout/layout_pager_footer.xml
+++ b/app/src/main/res/layout/layout_pager_footer.xml
@@ -2,19 +2,11 @@
     android:layout_width="match_parent"
     android:layout_height="50dp"
     android:gravity="center"
-    android:orientation="horizontal" >
-
-
-
-    <ImageView
-        android:id="@+id/iv_footer_loading"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:background="@drawable/icon_loading_circle"
-        android:layout_marginRight="5dp" android:visibility="gone"/>
+    android:orientation="horizontal">
 
 
     <ProgressBar
+        android:id="@+id/pb_footer_loading"
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:layout_marginRight="5dp" />
