--- a/app/src/main/res/layout/layout_read_bottom.xml
+++ b/app/src/main/res/layout/layout_read_bottom.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical">
 
     <LinearLayout
-        android:id="@+id/layout_menu_top"
+        android:id="@+id/layout_menu_aa_set"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
