--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,11 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <string-array name="main_menu_titles">
+        <item>书架</item>
+        <item>书城</item>
+        <item>我</item>
+    </string-array>
+
     <!-- ReadMenu -->
     <string-array name="read_menu_titles">
         <item>夜间</item>
+        <item>设置</item>
         <item>目录</item>
-        <item>点赞</item>
     </string-array>
 
     <integer-array name="read_menu_icon">
