--- a/app/src/main/res/layout/fragment_book_city.xml
+++ b/app/src/main/res/layout/fragment_book_city.xml
@@ -1,5 +1,4 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -9,44 +8,12 @@
         android:layout_width="fill_parent"
         android:layout_height="40dp">
 
-        <LinearLayout
+        <GridView
+            android:id="@+id/gv_tab"
+            style="@style/ListSelectorBorderless"
             android:layout_width="fill_parent"
             android:layout_height="40dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/tv_recommend"
-                style="@style/ItemBackagroundBorderless"
-                android:layout_width="0dp"
-                android:layout_height="fill_parent"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="@string/book_city_rank"
-                android:textColor="@color/main_dress_color"
-                android:textSize="@dimen/font_size_middle" />
-
-            <TextView
-                android:id="@+id/tv_rank"
-                style="@style/ItemBackagroundBorderless"
-                android:layout_width="0dp"
-                android:layout_height="fill_parent"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="@string/book_city_recommend"
-                android:textColor="@color/tv_desc_color"
-                android:textSize="@dimen/font_size_middle" />
-
-            <TextView
-                android:id="@+id/tv_category"
-                style="@style/ItemBackagroundBorderless"
-                android:layout_width="0dp"
-                android:layout_height="fill_parent"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="@string/book_city_category"
-                android:textColor="@color/tv_desc_color"
-                android:textSize="@dimen/font_size_middle" />
-        </LinearLayout>
+            android:numColumns="3"></GridView>
 
         <ImageView
             android:id="@+id/iv_line"
@@ -62,9 +29,10 @@
             android:layout_alignParentBottom="true" />
     </RelativeLayout>
 
+
     <com.qiwenge.android.ui.SlowViewPager
         android:id="@+id/viewpager_book_city"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"></com.qiwenge.android.ui.SlowViewPager>
+        android:layout_height="fill_parent" />
 
 </LinearLayout>
