--- a/app/src/main/res/anim/roate_loading.xml
+++ b/app/src/main/res/anim/roate_loading.xml
@@ -9,7 +9,6 @@
         android:fromDegrees="0"
         android:toDegrees="360"
         android:interpolator="@android:anim/linear_interpolator"
-        android:repeatCount="-1"
-        />
+        android:repeatCount="-1" />
 
 </set>
