--- a/app/src/main/res/layout/item_book.xml
+++ b/app/src/main/res/layout/item_book.xml
@@ -4,7 +4,8 @@
     android:layout_height="wrap_content"
     android:gravity="center_vertical"
     android:orientation="horizontal"
-    android:padding="@dimen/default_item_padding">
+    android:padding="@dimen/default_item_padding"
+    android:transitionName="book_detail">
 
     <ImageView
         android:id="@+id/item_iv_cover"
@@ -14,7 +15,8 @@
         android:contentDescription="@string/str_empty"
         android:padding="1px"
         android:scaleType="fitXY"
-        android:src="@drawable/icon_place_holder" />
+        android:src="@drawable/icon_place_holder"
+        android:transitionName="book_cover" />
 
     <LinearLayout
         android:layout_width="fill_parent"
@@ -30,7 +32,8 @@
             android:layout_height="wrap_content"
             android:text="@string/app_name"
             android:textColor="@color/tv_title_color"
-            android:textSize="@dimen/font_size_middle" />
+            android:textSize="@dimen/font_size_middle"
+            android:transitionName="book_title" />
 
         <TextView
             android:id="@+id/item_tv_author"
