--- a/app/src/main/res/layout/activity_book_intro.xml
+++ b/app/src/main/res/layout/activity_book_intro.xml
@@ -22,8 +22,8 @@
 
             <ImageView
                 android:id="@+id/iv_cover"
-                android:layout_width="@dimen/item_cover_width"
-                android:layout_height="@dimen/item_cover_height"
+                android:layout_width="84dp"
+                android:layout_height="100dp"
                 android:background="@drawable/cover_border"
                 android:contentDescription="@string/str_empty"
                 android:padding="1px"
@@ -44,8 +44,8 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="center_vertical"
-                    android:textColor="@color/tv_title_color"
-                    android:textSize="@dimen/font_size_middle"
+                    android:textColor="@color/main_dress_color"
+                    android:textSize="@dimen/font_size_big"
                     android:transitionName="book_title" />
 
                 <TextView
