--- a/app/src/main/res/drawable/loading_dialog_bg.xml
+++ b/app/src/main/res/drawable/loading_dialog_bg.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android" >
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <corners android:radius="8dp" />
+    <corners android:radius="200dp" />
 
     <solid android:color="#8F000000" />
 
     <stroke android:color="#8F000000" />
 
     <size
-        android:height="90dp"
-        android:width="90dp" />
+        android:width="60dp"
+        android:height="60dp" />
 
 </shape>
