--- a/app/src/main/res/layout/layout_pager_footer.xml
+++ b/app/src/main/res/layout/layout_pager_footer.xml
@@ -7,17 +7,8 @@
 
     <ProgressBar
         android:id="@+id/pb_footer_loading"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:layout_marginRight="5dp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:layout_centerInParent="true"
-        android:gravity="center"
-        android:text="正在加载..."
-        android:textColor="@color/tv_desc_color"
-        android:textSize="@dimen/font_size_middle" />
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_margin="14dp" />
 
 </LinearLayout>
