--- a/app/src/main/res/layout/dialog_l_container.xml
+++ b/app/src/main/res/layout/dialog_l_container.xml
@@ -8,14 +8,23 @@
         android:alpha="0.6"
         android:background="@android:color/black" />
 
+    <ProgressBar
+        android:id="@+id/pb_loading"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_centerInParent="true"
+        android:visibility="gone" />
+
     <LinearLayout
+        android:id="@+id/layout_content"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:layout_margin="24dp"
         android:background="@drawable/my_dialog_bg"
         android:orientation="vertical"
-        android:paddingBottom="16dp">
+        android:paddingBottom="16dp"
+        android:visibility="visible">
 
         <TextView
             android:id="@+id/tv_dialog_title"
