Changed the action bar height to 56dp.

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -3,7 +3,7 @@
 
     <string-array name="main_menu_titles">
         <item>书架</item>
-        <item>书城</item>
+        <item>发现</item>
         <item>我</item>
     </string-array>
 
