--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,6 +10,7 @@
     <dimen name="default_item_padding_small">5dp</dimen>
     <dimen name="default_activity_padding">10dp</dimen>
     <dimen name="action_btn_height">48dp</dimen>
+    <dimen name="action_bar_height">56dp</dimen>
 
     <!-- Font Size -->
     <dimen name="font_size_action_title">18sp</dimen>
