--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -33,6 +33,7 @@
     <style name="MyActionBar" parent="@android:style/Widget.Holo.Light.ActionBar.Solid">
         <item name="android:background">@color/action_bar_bg_color</item>
         <item name="android:titleTextStyle">@style/MyActionBar.Title</item>
+        <item name="android:height">@dimen/action_bar_height</item>
     </style>
 
     <!-- ActionBar字体 -->
