--- a/app/src/main/res/layout/action_bar_search.xml
+++ b/app/src/main/res/layout/action_bar_search.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="48dp"
+    android:layout_height="@dimen/action_bar_height"
     android:focusable="true"
     android:focusableInTouchMode="true"
     android:gravity="center_vertical"
@@ -11,7 +11,7 @@
     <EditText
         android:id="@+id/et_search"
         android:layout_width="0dp"
-        android:layout_height="@dimen/action_btn_height"
+        android:layout_height="@dimen/action_bar_height"
         android:layout_marginLeft="10dp"
         android:layout_weight="1"
         android:background="@android:color/transparent"
@@ -26,8 +26,8 @@
     <ImageView
         android:id="@+id/iv_search"
         style="@style/ItemBackagroundBorderless"
-        android:layout_width="56dp"
-        android:layout_height="48dp"
+        android:layout_width="@dimen/action_bar_height"
+        android:layout_height="@dimen/action_bar_height"
         android:layout_marginLeft="10dp"
         android:scaleType="center"
         android:src="@drawable/ic_action_search" />
