--- a/app/src/main/res/layout/fragment_me.xml
+++ b/app/src/main/res/layout/fragment_me.xml
@@ -29,7 +29,7 @@
                     android:layout_width="70dp"
                     android:layout_height="70dp"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/default_avatar" />
+                    android:src="@drawable/ic_default_avatar" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
