--- a/app/src/main/res/layout/item_sub_menu.xml
+++ b/app/src/main/res/layout/item_sub_menu.xml
@@ -1,16 +1,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/layout_empty"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
-    android:id="@+id/layout_empty"
-    android:visibility="gone"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:visibility="gone">
 
     <ImageView
         android:id="@+id/iv_empty"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/icon_network_error" />
+        android:background="@drawable/ic_empty_default" />
 
     <TextView
         android:id="@+id/tv_empty"
@@ -29,12 +29,12 @@
         android:layout_width="wrap_content"
         android:layout_height="40dp"
         android:layout_marginTop="16dp"
+        android:background="@drawable/btn_hollow_yellow"
         android:paddingLeft="30dp"
         android:paddingRight="30dp"
-        android:visibility="gone"
-        android:background="@drawable/btn_hollow_yellow"
         android:text="@string/app_name"
         android:textColor="@color/btn_yellow_text_color"
-        android:textSize="@dimen/font_size_middle" />
+        android:textSize="@dimen/font_size_middle"
+        android:visibility="gone" />
 
 </LinearLayout>
