--- a/app/src/main/res/layout/activity_read.xml
+++ b/app/src/main/res/layout/activity_read.xml
@@ -13,15 +13,15 @@
     <LinearLayout
         android:id="@+id/layout_reader_top"
         android:layout_width="fill_parent"
-        android:layout_height="48dp"
-        android:layout_marginTop="-48dp"
+        android:layout_height="@dimen/action_bar_height"
+        android:layout_marginTop="-56dp"
         android:background="@color/reader_menu_bg_color"
         android:gravity="center_vertical"
         android:orientation="horizontal">
 
         <LinearLayout
             android:id="@+id/layout_back"
-            android:layout_width="wrap_content"
+            android:layout_width="56dp"
             android:layout_height="fill_parent"
             android:background="@drawable/action_bar_item_bg"
             android:gravity="center_vertical"
@@ -46,7 +46,6 @@
             android:textColor="@color/action_bar_text_color"
             android:textSize="@dimen/font_size_action_title" />
 
-
         <ImageView
             android:id="@+id/btn_source"
             android:layout_width="54dp"
@@ -54,7 +53,8 @@
             android:background="@drawable/action_bar_item_bg"
             android:gravity="center_vertical"
             android:scaleType="center"
-            android:src="@drawable/ic_action_source" />
+            android:src="@drawable/ic_action_source"
+            android:visibility="gone" />
 
     </LinearLayout>
 
