--- a/app/src/main/res/layout/item_read_menu.xml
+++ b/app/src/main/res/layout/item_read_menu.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="56dp"
     android:gravity="center"
     android:orientation="vertical"
     android:paddingBottom="8dp"
-    android:paddingTop="12dp" >
+    android:paddingTop="12dp">
 
     <ImageView
         android:id="@+id/item_iv_icon"
