--- a/app/src/main/res/layout/dialog_l_container.xml
+++ b/app/src/main/res/layout/dialog_l_container.xml
@@ -37,7 +37,7 @@
             android:paddingTop="26dp"
             android:text="@string/app_name"
             android:textColor="@color/main_dress_color"
-            android:textSize="@dimen/font_size_huge" />
+            android:textSize="@dimen/font_size_big" />
 
         <ImageView
             android:id="@+id/iv_divider"
@@ -55,7 +55,7 @@
             android:paddingRight="26dp"
             android:text="@string/app_name"
             android:textColor="@color/tv_desc_color"
-            android:textSize="@dimen/font_size_middle" />
+            android:textSize="@dimen/font_size_small" />
 
         <LinearLayout
             android:id="@+id/layout_dialog_content"
