--- a/app/src/main/res/layout/dialog_l_simple.xml
+++ b/app/src/main/res/layout/dialog_l_simple.xml
@@ -8,22 +8,26 @@
     <TextView
         android:id="@+id/tv_btn_cancel"
         style="@style/ItemBackaground"
-        android:layout_width="80dp"
+        android:layout_width="wrap_content"
         android:layout_height="38dp"
         android:layout_marginRight="10dp"
         android:gravity="center"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
         android:text="@string/str_cancel"
         android:textColor="@color/tv_desc_color"
-        android:textSize="@dimen/font_size_middle" />
+        android:textSize="@dimen/font_size_small" />
 
     <TextView
         android:id="@+id/tv_btn_sure"
         style="@style/ItemBackaground"
-        android:layout_width="80dp"
+        android:layout_width="wrap_content"
         android:layout_height="38dp"
         android:gravity="center"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
         android:text="@string/str_sure"
         android:textColor="@color/main_dress_color"
-        android:textSize="@dimen/font_size_middle" />
+        android:textSize="@dimen/font_size_small" />
 
 </LinearLayout>
