--- a/app/src/main/res/layout/item_read_menu.xml
+++ b/app/src/main/res/layout/item_read_menu.xml
@@ -1,26 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="56dp"
-    android:gravity="center"
-    android:orientation="vertical"
-    android:paddingBottom="8dp"
-    android:paddingTop="12dp">
+    android:layout_height="56dp">
 
-    <ImageView
-        android:id="@+id/item_iv_icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@android:color/darker_gray" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:paddingTop="5dp"
+        android:layout_height="56dp">
 
-    <TextView
-        android:id="@+id/item_tv_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="2dp"
-        android:gravity="center"
-        android:text="@string/app_name"
-        android:textColor="@color/tv_desc_color"
-        android:textSize="@dimen/font_size_12" />
+        <ImageView
+            android:id="@+id/item_iv_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:background="@mipmap/icon_menu_mode_night" />
 
-</LinearLayout>
+        <TextView
+            android:id="@+id/item_tv_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/item_iv_icon"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="2dp"
+            android:text="@string/app_name"
+            android:textColor="@color/white_p50"
+            android:textSize="@dimen/font_size_12" />
+
+    </RelativeLayout>
+
+</RelativeLayout>
