--- a/app/src/main/res/layout/layout_read_page_bottom.xml
+++ b/app/src/main/res/layout/layout_read_page_bottom.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:textColor="@color/tv_title_color"
-        android:textSize="@dimen/font_size_12" />
+        android:textSize="@dimen/font_size_least" />
 
     <ProgressBar
         android:id="@+id/progreebar_battery"
@@ -37,6 +37,6 @@
         android:paddingBottom="1dp"
         android:textColor="@color/tv_title_color"
         android:text="21:40"
-        android:textSize="@dimen/font_size_12" />
+        android:textSize="@dimen/font_size_least" />
 
 </RelativeLayout>
