--- a/app/src/main/res/drawable/btn_hollow_gray_n.xml
+++ b/app/src/main/res/drawable/btn_hollow_gray_n.xml
@@ -2,8 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
 
-    <corners android:radius="2dp" />
-
     <solid android:color="@android:color/transparent" />
 
     <size
@@ -12,6 +10,6 @@
 
     <stroke
         android:width="1dp"
-        android:color="@color/main_gray_color" />
+        android:color="@color/btn_gray" />
 
 </shape>
