--- a/app/src/main/res/drawable/btn_hollow_gray_s.xml
+++ b/app/src/main/res/drawable/btn_hollow_gray_s.xml
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle" >
+    android:shape="rectangle">
 
-    <corners android:radius="2dp" />
-
-    <solid android:color="@color/main_gray_color" />
+    <solid android:color="@color/btn_gray" />
 
     <size
-        android:height="10dp"
-        android:width="10dp" />
+        android:width="10dp"
+        android:height="10dp" />
 
     <stroke
         android:width="1dp"
-        android:color="@color/main_gray_color" />
+        android:color="@color/btn_gray" />
 
 </shape>
