--- a/app/src/main/res/layout/item_about_recommend.xml
+++ b/app/src/main/res/layout/item_about_recommend.xml
@@ -41,7 +41,7 @@
             android:maxLines="2"
             android:text="@string/app_name"
             android:textColor="@color/tv_desc_color"
-            android:textSize="@dimen/font_size_12" />
+            android:textSize="@dimen/font_size_least" />
     </LinearLayout>
 
 </LinearLayout>
