--- a/app/src/main/res/layout/item_main_menu.xml
+++ b/app/src/main/res/layout/item_main_menu.xml
@@ -25,7 +25,7 @@
             android:gravity="center"
             android:text="@string/app_name"
             android:textColor="@color/tv_desc_color"
-            android:textSize="@dimen/font_size_12" />
+            android:textSize="@dimen/font_size_least" />
 
     </LinearLayout>
 </LinearLayout>
