--- a/app/src/main/res/layout/item_offline.xml
+++ b/app/src/main/res/layout/item_offline.xml
@@ -1,19 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="56dp">
+    android:layout_height="50dp"
+    android:background="@color/reader_menu_bg_color">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:paddingTop="5dp"
-        android:layout_height="56dp">
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:layout_centerInParent="true"
+        android:gravity="center_vertical">
 
         <ImageView
             android:id="@+id/item_iv_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:background="@mipmap/icon_menu_mode_night" />
+            android:background="@drawable/icon_check_normal" />
 
         <TextView
             android:id="@+id/item_tv_title"
@@ -21,11 +23,11 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/item_iv_icon"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="2dp"
+            android:layout_marginLeft="5dp"
             android:text="@string/app_name"
             android:textColor="@color/white_p50"
             android:textSize="@dimen/font_size_least" />
 
-    </RelativeLayout>
+    </LinearLayout>
 
 </RelativeLayout>
