--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -31,9 +31,16 @@
     <color name="white_p50">#7fffffff</color>
 
     <!-- TextView -->
-    <color name="tv_title_color">#4d4d4d</color>
+    <color name="tv_title_color">#333333</color>
     <color name="tv_title_night_color">#808080</color>
+    <color name="tv_content_color_normal">#333333</color>
     <color name="tv_desc_color">#838383</color>
+
+    <color name="btn_gray">#404040</color>
+
+    <color name="gray_light">#aaaaaa</color>
+    <color name="gray_middle">#666666</color>
+    <color name="gray_dark">#333333</color>
 
     <!-- Reader -->
     <color name="reader_menu_bg_color">#303030</color>
