--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,11 +14,13 @@
 
     <!-- Font Size -->
     <dimen name="font_size_action_title">18sp</dimen>
-    <dimen name="font_size_12">12sp</dimen>
+
+    <dimen name="font_size_least">12sp</dimen>
     <dimen name="font_size_small">14sp</dimen>
     <dimen name="font_size_middle">16sp</dimen>
     <dimen name="font_size_big">18sp</dimen>
     <dimen name="font_size_huge">20sp</dimen>
+    <dimen name="font_size_biggest">24sp</dimen>
 
     <!-- Common Size -->
     <dimen name="set_item_height">65dp</dimen>
