Hide offline item for publishing to googleplay.

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -17,14 +17,14 @@
         <item>夜间</item>
         <item>设置</item>
         <item>目录</item>
-        <item>缓存</item>
+        <!--<item>缓存</item>-->
     </string-array>
 
     <integer-array name="read_menu_icons">
         <item>@mipmap/icon_menu_mode_night</item>
         <item>@mipmap/icon_menu_aa</item>
         <item>@mipmap/icon_menu_chapters</item>
-        <item>@mipmap/icon_menu_offline</item>
+        <!--<item>@mipmap/icon_menu_offline</item>-->
     </integer-array>
 
     <!--  -->
